--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
+body{ overflow-y: hidden}
 
 // BLUE BAR OF SEPARATION
 
